--
-- You should have received a copy of the GNU General Public License
-- along with this package; see the file COPYING.  If not, write to
-- the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
-- Boston, MA 02111-1307, USA.
--

This file lists user visible changes that were made between releases.  For
more verbose descriptions of these and internal changes see the ChangeLog
files.

Version 0.0.5
-------------

 * translations into French and Japanese
 * some new components and diagrams
 * manual axes scale for diagrams
 * many minor improvements and bug fixes

Version 0.0.4
-------------

 * per-language internal help system implemented
 * translations into portuguese and spanish
 * some new paintings and components
 * subcircuits with symbol painted by the user
 * improved the zooming (looks nicer now)
 * progress bar during simulation
 * some small improvements and bug fixes

Version 0.0.3
-------------

 * avoided working directory changes during program execution
 * translations into Polish and Romanian
 * some new components (e.g. transistors)
 * some new operations (e.g. aligning)
 * undo/redo function
 * improved subcircuit support
 * resize operation for paintings
 * logarithmical scale for rectangle diagrams
 * change style of graphs (dashed, dotted, ...)
 * qucs-edit and qucs-help as external programs
 * application settings dialog
 * many small improvements and bug fixes

Version 0.0.2
-------------

 * translations into german and italian
 * modified build system, no more kdevelop
 * a (very modest) help system
 * deleting and rename of documents
 * some new components and paintings
 * runs more stable
 * mouse cursor symbols show active action
 * document area more flexible for resize and zoom
 * equation support
 * strongly improved handling with wire labels
 * diagrams more beautiful
 * diagrams can show independent and more-dimensional graphs
 * markers can be set on graphs

Version 0.0.1
-------------

 * first available version