@@ -588,6 +588,17 @@
  local   = "{01129316.pdf}",
 }
 
+@article{Edwards,
+ author  = {Marion Lee Edwards and Jeffrey H. Sinsky},
+ title   = "{A New Criterion for Linear 2-Port Stability Using a Single Geometrically Derived Parameter}",
+ journal = IEEETMTT,
+ volume  = {40},
+ number  = {12},
+ month   = dec,
+ year    = {1992},
+ pages   = {2303-2311},
+}
+
 @article{Wedge,
  author  = {Scott W. Wedge and David B. Rutledge},
  title   = "{Wave Techniques for Noise Modeling and Measurement}",
