@@ -31,7 +31,7 @@ HB_Sim::HB_Sim()
   if (a != -1) Texts.append(new Text(0, 0, s.mid(a+1)));
 
   x1 = -10; y1 = -9;
-  x2 = x1+150; y2 = y1+46;
+  x2 = x1+163; y2 = y1+59;
 
   tx = 0;
   ty = y2+1;
