@@ -1,3 +1,13 @@
+2004-12-04  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
+
+	* fixed some bugs in diagram clipping algorithm
+	* graphs can be painted with stars, circles and arrows
+
+2004-12-01  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
+
+	* disabled rotation angle in graphictext dialog if in
+	symbol mode
+
 2004-11-23  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
 
 	* wire label a little bit more beautiful
